[tool.poetry]
name = "graphlib"
version = "0.1.0"
description = "Graphs and algorithms"
authors = ["A.Barmin"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
